--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 jdk:
   - oraclejdk8
-before_script:
-  - chmod +x gradlex
+script:
+  - chmod +x gradlew
+  - ./gradlew clean shadowJar
